modifying the main

--- a/html/main.html
+++ b/html/main.html
@@ -16,9 +16,9 @@
     <body>
         <div id="main-outer">
             <div id="main-inner">
-                <div id="main-title">Chrome Extension Template v1.0</div>
-                <img id="main-image" src="../images/tsheets_logo.png" />
-                <div id="main-about-text">A sample project for kickstarting your next Chrome browser extension.</div>
+                <div id="main-title">No Ads Please</div>
+                <img id="main-image" src="../images/reoudouodu_128.png" />
+                <div id="main-about-text">Tu veux regarder hot-dog pour un champion sans pubs ? Viens. On est bien.</div>
             </div>
         </div>
 
