--- a/html/main.html
+++ b/html/main.html
@@ -17,7 +17,7 @@
         <div id="main-outer">
             <div id="main-inner">
                 <div id="main-title">No Ads Please</div>
-                <img id="main-image" src="../images/reoudouodu_128.png" />
+                <img id="main-image" src="../images/reoudouodu.png" />
                 <div id="main-about-text">Tu veux regarder hot-dog pour un champion sans pubs ? Viens. On est bien.</div>
             </div>
         </div>
